--- a/afterstudentlogin.html
+++ b/afterstudentlogin.html
@@ -278,8 +278,9 @@
 
         async function logout(){
             await supabaseClient.auth.signOut();
-            window.location.href = "loginpage.html";
+            window.location.href = "index.html";
         }
     </script>
 </body>
+
 </html>
