--- a/afterstudentlogin.html
+++ b/afterstudentlogin.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <link rel="stylesheet" href="student.css">
-    <script src="student.js"></script>
+    <script src="js/student.js"></script>
 </head>
 <body>
 
@@ -88,6 +88,7 @@
 </body>
 
 </html>
+
 
 
 
