--- a/afterstudentlogin.html
+++ b/afterstudentlogin.html
@@ -828,41 +828,48 @@
         showMsg(msg, 'info', '🤖 AI is evaluating your submission...');
         btn.innerHTML = '🤖 Evaluating...';
 
-        try {
-            const response = await fetch(
-  "https://dezrvgfkzwdpdzztbiyo.functions.supabase.co/compare-math",
-  {
-    method: "POST",
-    headers: {
-      "Content-Type": "application/json",
-      "apikey": supabaseKey,
-      "Authorization": "Bearer " + supabaseKey
-    },
-    body: JSON.stringify({
-      fileName: file.name.toLowerCase()
-    })
-  }
-);
-
-
-            await supabaseClient.from("assignments").update({
-    status: "Checked",
-    ai_remark: result.feedback,        // 🔥 correct field
-    total_marks: result.percentage    // 🔥 store percentage for graph
-}).eq("id", inserted[0].id);
-
-document.getElementById("submitMessage").innerText =
-    `Score: ${result.score}/${result.total} 
-     | ${result.percentage}% 
-     | Feedback: ${result.feedback}`;
-            bar.style.width = '100%';
-            showMsg(msg, 'success', '✅ AI Result: ' + result.remark);
-            loadRank();
-        } catch {
-            bar.style.width = '100%';
-            showMsg(msg, 'info', '📬 Submission stored. AI result pending — check back soon.');
+       try {
+    const response = await fetch(
+        "https://dezrvgfkzwdpdzztbiyo.functions.supabase.co/compare-math",
+        {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json",
+                "apikey": supabaseKey,
+                "Authorization": "Bearer " + supabaseKey
+            },
+            body: JSON.stringify({
+                fileName: file.name.toLowerCase()
+            })
         }
+    );
 
+    if (!response.ok) {
+        throw new Error("AI server error");
+    }
+
+    const result = await response.json();   // ✅ THIS WAS MISSING
+
+    await supabaseClient.from("assignments").update({
+        status: "Checked",
+        ai_remark: result.feedback,
+        total_marks: result.percentage
+    }).eq("id", inserted[0].id);
+
+    showMsg(
+        msg,
+        'success',
+        `✅ Score: ${result.score}/${result.total} | ${result.percentage}% | ${result.feedback}`
+    );
+
+    bar.style.width = '100%';
+    loadRank();
+
+} catch (err) {
+    console.log(err);
+    showMsg(msg, 'error', '❌ AI evaluation failed.');
+}
+          
         resetBtn(btn);
         document.getElementById('assignmentTitle').value = '';
         document.getElementById('submissionDate').value = '';
